# acumatica-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: USAGE.md  claude-desktop-config.example.json
skills/ap-health/: SKILL.md
skills/ar-health/: SKILL.md
skills/doc-doctor/: SKILL.md
skills/recent-records/: SKILL.md
skills/three-way-match/: SKILL.md
src/acumatica_mcp/: __init__.py  entity_catalog.json  rebuild_catalog.py  server.py
